# pd-project-marvin

./: .gitignore  README.md  local_script.sh  script.sh
GUI_pacbot/: LICENSE  README.md  package.json  webpack.config.js
GUI_pacbot/src/: App.vue  index.js  template.html
GUI_pacbot/src/components/: ActionComp.vue  ComboBox.vue  CronoMeter.vue  EmergencyComp.vue  LogComp.vue  SceneControls.vue  SpeedSlider.vue  StartStopButton.vue  VueInteractDraggable.vue
GUI_pacbot/src/js/: ExecutionScheduler.js  ModelCreator.js  PlanningInterface.js  ROSInterface.js  SceneCreator.js  SpecialEffects.js  VisionInterface.js  store.js
GUI_pacbot/src/router/: index.js
GUI_pacbot/src/views/: ControlsView.vue  LogsView.vue  PageNotFound.vue  PlanView.vue  SubView.vue  ThreeScene.vue
for_jxavi/: complex_pattern.json  complex_pattern_updated.json
interface/: README.md  Timeline..docx
interface/locm/: action.py  iLOCM.py  locm2.py  locm3.py  requirements.txt  sort.py  state.py  training_filter.py
interface/locm/Training sequence/: 12.txt
interface/robot-backend/: actions.json  archive.json  books_app.py  projects.json  projects_app.py  requirements_locm.txt
interface/robot-frontend/: README.md  package-lock.json  package.json  quasar.config.js
locm/: 12.txt  18.txt  4.txt  README.md  hypo.py  locm1.py  locm3.py  plot.py  requirements.txt  run_locm.bash  transtion.py
locm/Training sequence/: 19.txt  6.txt
locm/output/Blocksworld/: Blocksworld.pddl  b1.graphml  b2.graphml  b3.graphml  dict.txt  green_cube_p0201.graphml  zero.graphml
ros_module/src/vision_pacbot/: .gitignore  LICENSE  README.md
ros_module/src/vision_pacbot/model_validator/: CMakeLists.txt  setup.py
ros_module/src/vision_pacbot/model_validator/src/model_validator/: model_validator.py
ros_module/src/vision_pacbot/perception/: CMakeLists.txt  package.xml  setup.py
ros_module/src/vision_pacbot/perception/src/perception/: __init__.py  depth_handler.py  rgb_handler.py  vision_driver.py
ros_module/src/vision_pacbot/vision_launch/: CMakeLists.txt
ros_module/src/vision_pacbot/vision_launch/launch/: vision.launch
ros_module/src/vision_pacbot/vision_logic/: CMakeLists.txt  package.xml  setup.py
ros_module/src/vision_pacbot/vision_logic/database/: lego_map.json  state.json
ros_module/src/vision_pacbot/vision_logic/launch/: vision_logic.launch
ros_module/src/vision_pacbot/vision_logic/src/vision_logic/: vision_logic.py
ros_module/src/vision_pacbot/yumi_motion_status/: CMakeLists.txt  package.xml  setup.py
ros_module/src/vision_pacbot/yumi_motion_status/src/yumi_motion_status/: yumi_motion_status.py
wizard_of_oz_perception/: README.md  package.json
wizard_of_oz_perception/.obsidian/: graph.json  workspace.json
wizard_of_oz_perception/src/: App.vue  index.js
wizard_of_oz_perception/src/Components/: StatusComp.vue
wizard_of_oz_perception/src/assets/: model.json
wizard_of_oz_perception/src/js/: LegoCreator.js  SpecialEffects.js
wizard_of_oz_perception/src/views/: ThreeScene.vue
woz_pardeep/: webpack.config.js
woz_pardeep/src/: template.html
woz_pardeep/src/Components/: ComboBox.vue
woz_pardeep/src/assets/: lego_map.json
(+97 files in other folders)
